--- a/themes/toha/layouts/partials/home.html
+++ b/themes/toha/layouts/partials/home.html
@@ -13,7 +13,7 @@
       {{ else if .Site.Params.author.name }}
         {{ .Site.Params.author.name }}
       {{ else }}
-        Jane Doe
+        Jason Barnes
       {{ end }}
     </h1>
     <div class="typing-carousel">
