--- a/themes/toha/layouts/partials/helpers/get-author-name.html
+++ b/themes/toha/layouts/partials/helpers/get-author-name.html
@@ -1,4 +1,4 @@
-{{ $authorName:= "John Doe"}}
+{{ $authorName:= "Jason Barnes"}}
 {{ if .Site.Data.site.author}}
     {{ $authorName = .Site.Data.site.author.name }}
 {{ end}}
